Исправлено построение выражения